<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
         android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@null"
            android:importantForAccessibility="no"
            android:padding="8dp"
            android:src="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/RegistrationText"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/RegistrationText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/RegistrationText"
            android:gravity="center_vertical"
            android:textColor="#101010"
            android:textSize="20sp"
            android:layout_marginRight="16dp"

            app:layout_constraintStart_toEndOf="@id/BackButton"
            app:layout_constraintBottom_toBottomOf="@id/BackButton"
            app:layout_constraintTop_toTopOf="@id/BackButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="@id/BackButton"
            app:layout_constraintEnd_toEndOf="@id/RegistrationText"
            app:layout_constraintTop_toBottomOf="@id/RegistrationText"
            android:hint="@string/LoginText">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textNoSuggestions|textFilter"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:fontFamily="@font/inter" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NicknameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/BackButton"
            app:layout_constraintEnd_toEndOf="@id/RegistrationText"
            app:layout_constraintTop_toBottomOf="@id/LoginField"
            android:hint="@string/NicknameText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter"
                android:inputType="textNoSuggestions|textFilter"
                android:maxLines="1"
                android:textColorHint="#757575"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/BackButton"
            app:layout_constraintEnd_toEndOf="@id/RegistrationText"
            app:layout_constraintTop_toBottomOf="@id/NicknameField"
            app:endIconMode="password_toggle"
            android:hint="@string/PasswordText">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:fontFamily="@font/inter" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RepeatPasswordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/BackButton"
            app:layout_constraintEnd_toEndOf="@id/RegistrationText"
            app:layout_constraintTop_toBottomOf="@id/PasswordField"
            app:endIconMode="password_toggle"
            android:hint="@string/RepeatPasswordText">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:fontFamily="@font/inter" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/GenderText"
            android:textColor="#101010"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/RepeatPasswordField"
            app:layout_constraintTop_toBottomOf="@id/RepeatPasswordField" />

        <RadioGroup
            android:layout_marginTop="16dp"
            android:id="@+id/radioGroup"
            android:layout_width="109dp"
            android:layout_height="104dp"
            android:orientation="vertical"
            android:paddingStart="-6dp"
            app:layout_constraintTop_toBottomOf="@id/Gender"
            app:layout_constraintStart_toStartOf="@id/Gender">


            <RadioButton
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="10dp"
                android:buttonTint="@color/radio_color"
                android:text="@string/Male" />

            <RadioButton
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                android:paddingLeft="10dp"
                android:id="@+id/radioButton2"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:buttonTint="@color/radio_color"
                android:text="@string/Female" />

            <RadioButton
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:fontFamily="@font/inter"
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:buttonTint="@color/radio_color"
                android:text="@string/Other" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegistrationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#4B09F3"
            android:fontFamily="@font/inter_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="16dp"
            android:text="@string/RegistrationTextButton"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:letterSpacing="0"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@id/RepeatPasswordField"
            app:layout_constraintStart_toStartOf="@id/RepeatPasswordField"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:textColor="#000000"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/RegistrationButton"
            app:layout_constraintStart_toStartOf="@id/RegistrationButton"
            app:layout_constraintTop_toBottomOf="@id/RegistrationButton"
            android:textAlignment="center"
            android:text="@string/agreement"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>