<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/BicyclesImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/bicycles" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_bold"
        android:lineSpacingExtra="11sp"
        android:text="@string/WelcomeText"
        android:textAlignment="center"
        android:textColor="#101010"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BicyclesImage" />

    <TextView
        android:id="@+id/SubWelcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/SubWelcomeText"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#4B09F3"
        android:fontFamily="@font/inter_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxLines="1"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:text="@string/RegistrationTextButton"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:letterSpacing="0"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SubWelcomeText" />

    <TextView
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/inter_bold"
        android:padding="0dp"
        android:text="@string/LoginButton"
        android:textAlignment="center"
        android:textColor="#4B09F3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/RegistrationButton"
        app:layout_constraintStart_toStartOf="@id/RegistrationButton"
        app:layout_constraintTop_toBottomOf="@id/RegistrationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>